fix: update dependant items (perfect-scrollbar, nguniversal, webpack)

--- a/src/client/app/components/layout/main.component.scss
+++ b/src/client/app/components/layout/main.component.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/sass/variables';
+
 html,
 body {
   overflow: hidden !important;
@@ -5,4 +7,5 @@ body {
 
 .content-container {
   position: relative;
+  max-height: calc(100vh - #{rem(6.4)});
 }
